# aws-profile-selector

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: config.rs  main.rs  ui.rs
