[package]
name = "aws-profile-selector"
version = "0.1.0"
edition = "2024"
description = "Interactive AWS profile selector CLI tool"
license = "MIT"

[[bin]]
name = "aws-profile-selector"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
regex = "1.11"
